Completed hand refactoring

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/chronotopics-part/chronotopics-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/chronotopics-part/chronotopics-part.component.html
@@ -85,6 +85,7 @@
           <itinera-chronotope
             [chronotope]="editedChronotope"
             [tagEntries]="tagEntries"
+            [docRefTagEntries]="docRefTagEntries"
             (chronotopeChange)="onChronotopeSave($event)"
             (editorClose)="onChronotopeClose()"
           ></itinera-chronotope>
