--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -46,6 +46,7 @@
     <mat-tab label="sources">
       <!-- sources -->
       <cadmus-doc-references
+        [tagEntries]="tagEntries"
         [model$]="sources$"
         (modelChange)="onSourcesChange($event)"
       ></cadmus-doc-references>
