--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-events-part/person-events-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-events-part/person-events-part.component.html
@@ -88,6 +88,7 @@
             [model]="editedEvent"
             [typeEntries]="typeEntries"
             [partTagEntries]="partTagEntries"
+            [docRefTagEntries]="docRefTagEntries"
             (modelChange)="onEventSaved($event)"
             (editorClose)="onEventClosed()"
           ></itinera-bio-event>
