--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-restoration/ms-restoration.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-restoration/ms-restoration.component.html
@@ -61,6 +61,7 @@
   </div>
   <!-- sources -->
   <cadmus-doc-references
+    [tagEntries]="docRefTagEntries"
     [model$]="sources$"
     (modelChange)="onSourcesChanged($event)"
   ></cadmus-doc-references>
