--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotope/chronotope.component.html
@@ -69,6 +69,7 @@
     </mat-expansion-panel-header>
 
     <cadmus-doc-references
+      [tagEntries]="docRefTagEntries"
       [model$]="sources$"
       (modelChange)="onSourcesChange($event)"
     ></cadmus-doc-references>
