--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
@@ -102,6 +102,7 @@
   </div>
   <!-- sources -->
   <cadmus-doc-references
+    [tagEntries]="docRefTagEntries"
     [model$]="sources$"
     (modelChange)="onSourcesChanged($event)"
   ></cadmus-doc-references>
