--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
@@ -79,7 +79,7 @@
                 <td>{{ h.id }}</td>
                 <td>{{ typesToString(h.types) }}</td>
                 <td>{{ rangesToString(h.ranges) }}</td>
-                <td>{{ h.rubrications?.length || 0 }}</td>
+                <td style="text-align: center;">{{ h.rubrications?.length || 0 }}</td>
               </tr>
             </tbody>
           </table>
