Refactored ms dimensions into layouts

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-counts/decorated-counts.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/decorated-counts/decorated-counts.component.html
@@ -4,7 +4,7 @@
     <div>
       <button
         type="button"
-        mat-stroked-button
+        mat-icon-button
         color="primary"
         (click)="addCount()"
         matTooltip="Add a new count"
